sdk/datafactory/arm-datafactory/samples/v10/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                                             | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| ----------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [activityRunsQueryByPipelineRunSample.js][activityrunsquerybypipelinerunsample]                                                           | Query activity runs based on input filter conditions. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ActivityRuns_QueryByPipelineRun.json                                                                                                                                                                                                                                                                                                                                 |
| [dataFlowDebugSessionAddDataFlowSample.js][dataflowdebugsessionadddataflowsample]                                                         | Add a data flow into debug session. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlowDebugSession_AddDataFlow.json                                                                                                                                                                                                                                                                                                                                                  |
| [dataFlowDebugSessionCreateSample.js][dataflowdebugsessioncreatesample]                                                                   | Creates a data flow debug session. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlowDebugSession_Create.json                                                                                                                                                                                                                                                                                                                                                        |
| [dataFlowDebugSessionDeleteSample.js][dataflowdebugsessiondeletesample]                                                                   | Deletes a data flow debug session. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlowDebugSession_Delete.json                                                                                                                                                                                                                                                                                                                                                        |
| [dataFlowDebugSessionExecuteCommandSample.js][dataflowdebugsessionexecutecommandsample]                                                   | Execute a data flow debug command. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlowDebugSession_ExecuteCommand.json                                                                                                                                                                                                                                                                                                                                                |
| [dataFlowDebugSessionQueryByFactorySample.js][dataflowdebugsessionquerybyfactorysample]                                                   | Query all active data flow debug sessions. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlowDebugSession_QueryByFactory.json                                                                                                                                                                                                                                                                                                                                        |
| [dataFlowsCreateOrUpdateSample.js][dataflowscreateorupdatesample]                                                                         | Creates or updates a data flow. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlows_Create.json                                                                                                                                                                                                                                                                                                                                                                      |
| [dataFlowsDeleteSample.js][dataflowsdeletesample]                                                                                         | Deletes a data flow. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlows_Delete.json                                                                                                                                                                                                                                                                                                                                                                                 |
| [dataFlowsGetSample.js][dataflowsgetsample]                                                                                               | Gets a data flow. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlows_Get.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [dataFlowsListByFactorySample.js][dataflowslistbyfactorysample]                                                                           | Lists data flows. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DataFlows_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                             |
| [datasetsCreateOrUpdateSample.js][datasetscreateorupdatesample]                                                                           | Creates or updates a dataset. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Datasets_Create.json                                                                                                                                                                                                                                                                                                                                                                         |
| [datasetsDeleteSample.js][datasetsdeletesample]                                                                                           | Deletes a dataset. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Datasets_Delete.json                                                                                                                                                                                                                                                                                                                                                                                    |
| [datasetsGetSample.js][datasetsgetsample]                                                                                                 | Gets a dataset. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Datasets_Get.json                                                                                                                                                                                                                                                                                                                                                                                          |
| [datasetsListByFactorySample.js][datasetslistbyfactorysample]                                                                             | Lists datasets. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Datasets_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                                |
| [exposureControlGetFeatureValueByFactorySample.js][exposurecontrolgetfeaturevaluebyfactorysample]                                         | Get exposure control feature for specific factory. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ExposureControl_GetFeatureValueByFactory.json                                                                                                                                                                                                                                                                                                                           |
| [exposureControlGetFeatureValueSample.js][exposurecontrolgetfeaturevaluesample]                                                           | Get exposure control feature for specific location. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ExposureControl_GetFeatureValue.json                                                                                                                                                                                                                                                                                                                                   |
| [exposureControlQueryFeatureValuesByFactorySample.js][exposurecontrolqueryfeaturevaluesbyfactorysample]                                   | Get list of exposure control features for specific factory. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ExposureControl_QueryFeatureValuesByFactory.json                                                                                                                                                                                                                                                                                                               |
| [factoriesConfigureFactoryRepoSample.js][factoriesconfigurefactoryreposample]                                                             | Updates a factory's repo information. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_ConfigureFactoryRepo.json                                                                                                                                                                                                                                                                                                                                                  |
| [factoriesCreateOrUpdateSample.js][factoriescreateorupdatesample]                                                                         | Creates or updates a factory. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                |
| [factoriesDeleteSample.js][factoriesdeletesample]                                                                                         | Deletes a factory. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_Delete.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [factoriesGetDataPlaneAccessSample.js][factoriesgetdataplaneaccesssample]                                                                 | Get Data Plane access. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_GetDataPlaneAccess.json                                                                                                                                                                                                                                                                                                                                                                   |
| [factoriesGetGitHubAccessTokenSample.js][factoriesgetgithubaccesstokensample]                                                             | Get GitHub Access Token. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_GetGitHubAccessToken.json                                                                                                                                                                                                                                                                                                                                                               |
| [factoriesGetSample.js][factoriesgetsample]                                                                                               | Gets a factory. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_Get.json                                                                                                                                                                                                                                                                                                                                                                                         |
| [factoriesListByResourceGroupSample.js][factorieslistbyresourcegroupsample]                                                               | Lists factories. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_ListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                        |
| [factoriesListSample.js][factorieslistsample]                                                                                             | Lists factories under the specified subscription. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_List.json                                                                                                                                                                                                                                                                                                                                                      |
| [factoriesUpdateSample.js][factoriesupdatesample]                                                                                         | Updates a factory. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Factories_Update.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [globalParametersCreateOrUpdateSample.js][globalparameterscreateorupdatesample]                                                           | Creates or updates a Global parameter x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/GlobalParameters_Create.json                                                                                                                                                                                                                                                                                                                                                         |
| [globalParametersDeleteSample.js][globalparametersdeletesample]                                                                           | Deletes a Global parameter x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/GlobalParameters_Delete.json                                                                                                                                                                                                                                                                                                                                                                    |
| [globalParametersGetSample.js][globalparametersgetsample]                                                                                 | Gets a Global parameter x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/GlobalParameters_Get.json                                                                                                                                                                                                                                                                                                                                                                          |
| [globalParametersListByFactorySample.js][globalparameterslistbyfactorysample]                                                             | Lists Global parameters x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/GlobalParameters_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                |
| [integrationRuntimeNodesDeleteSample.js][integrationruntimenodesdeletesample]                                                             | Deletes a self-hosted integration runtime node. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimeNodes_Delete.json                                                                                                                                                                                                                                                                                                                                        |
| [integrationRuntimeNodesGetIPAddressSample.js][integrationruntimenodesgetipaddresssample]                                                 | Get the IP address of self-hosted integration runtime node. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimeNodes_GetIpAddress.json                                                                                                                                                                                                                                                                                                                      |
| [integrationRuntimeNodesGetSample.js][integrationruntimenodesgetsample]                                                                   | Gets a self-hosted integration runtime node. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimeNodes_Get.json                                                                                                                                                                                                                                                                                                                                              |
| [integrationRuntimeNodesUpdateSample.js][integrationruntimenodesupdatesample]                                                             | Updates a self-hosted integration runtime node. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimeNodes_Update.json                                                                                                                                                                                                                                                                                                                                        |
| [integrationRuntimeObjectMetadataGetSample.js][integrationruntimeobjectmetadatagetsample]                                                 | Get a SSIS integration runtime object metadata by specified path. The return is pageable metadata list. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimeObjectMetadata_Get.json                                                                                                                                                                                                                                                                          |
| [integrationRuntimeObjectMetadataRefreshSample.js][integrationruntimeobjectmetadatarefreshsample]                                         | Refresh a SSIS integration runtime object metadata. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimeObjectMetadata_Refresh.json                                                                                                                                                                                                                                                                                                                          |
| [integrationRuntimesCreateLinkedIntegrationRuntimeSample.js][integrationruntimescreatelinkedintegrationruntimesample]                     | Create a linked integration runtime entry in a shared integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_CreateLinkedIntegrationRuntime.json                                                                                                                                                                                                                                                                                         |
| [integrationRuntimesCreateOrUpdateSample.js][integrationruntimescreateorupdatesample]                                                     | Creates or updates an integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_Create.json                                                                                                                                                                                                                                                                                                                                                 |
| [integrationRuntimesDeleteSample.js][integrationruntimesdeletesample]                                                                     | Deletes an integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_Delete.json                                                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesGetConnectionInfoSample.js][integrationruntimesgetconnectioninfosample]                                               | Gets the on-premises integration runtime connection information for encrypting the on-premises data source credentials. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_GetConnectionInfo.json                                                                                                                                                                                                                                                         |
| [integrationRuntimesGetMonitoringDataSample.js][integrationruntimesgetmonitoringdatasample]                                               | Get the integration runtime monitoring data, which includes the monitor data for all the nodes under this integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_GetMonitoringData.json                                                                                                                                                                                                                                                  |
| [integrationRuntimesGetSample.js][integrationruntimesgetsample]                                                                           | Gets an integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_Get.json                                                                                                                                                                                                                                                                                                                                                                  |
| [integrationRuntimesGetStatusSample.js][integrationruntimesgetstatussample]                                                               | Gets detailed status information for an integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_GetStatus.json                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesListAuthKeysSample.js][integrationruntimeslistauthkeyssample]                                                         | Retrieves the authentication keys for an integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_ListAuthKeys.json                                                                                                                                                                                                                                                                                                                        |
| [integrationRuntimesListByFactorySample.js][integrationruntimeslistbyfactorysample]                                                       | Lists integration runtimes. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                         |
| [integrationRuntimesListOutboundNetworkDependenciesEndpointsSample.js][integrationruntimeslistoutboundnetworkdependenciesendpointssample] | Gets the list of outbound network dependencies for a given Azure-SSIS integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_ListOutboundNetworkDependenciesEndpoints.json                                                                                                                                                                                                                                                               |
| [integrationRuntimesRegenerateAuthKeySample.js][integrationruntimesregenerateauthkeysample]                                               | Regenerates the authentication key for an integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_RegenerateAuthKey.json                                                                                                                                                                                                                                                                                                                  |
| [integrationRuntimesRemoveLinksSample.js][integrationruntimesremovelinkssample]                                                           | Remove all linked integration runtimes under specific data factory in a self-hosted integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_RemoveLinks.json                                                                                                                                                                                                                                                                              |
| [integrationRuntimesStartSample.js][integrationruntimesstartsample]                                                                       | Starts a ManagedReserved type integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_Start.json                                                                                                                                                                                                                                                                                                                                          |
| [integrationRuntimesStopSample.js][integrationruntimesstopsample]                                                                         | Stops a ManagedReserved type integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_Stop.json                                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesSyncCredentialsSample.js][integrationruntimessynccredentialssample]                                                   | Force the integration runtime to synchronize credentials across integration runtime nodes, and this will override the credentials across all worker nodes with those available on the dispatcher node. If you already have the latest credential backup file, you should manually import it (preferred) on any self-hosted integration runtime node than using this API directly. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_SyncCredentials.json |
| [integrationRuntimesUpdateSample.js][integrationruntimesupdatesample]                                                                     | Updates an integration runtime. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_Update.json                                                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesUpgradeSample.js][integrationruntimesupgradesample]                                                                   | Upgrade self-hosted integration runtime to latest version if availability. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/IntegrationRuntimes_Upgrade.json                                                                                                                                                                                                                                                                                                                |
| [linkedServicesCreateOrUpdateSample.js][linkedservicescreateorupdatesample]                                                               | Creates or updates a linked service. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/LinkedServices_Create.json                                                                                                                                                                                                                                                                                                                                                            |
| [linkedServicesDeleteSample.js][linkedservicesdeletesample]                                                                               | Deletes a linked service. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/LinkedServices_Delete.json                                                                                                                                                                                                                                                                                                                                                                       |
| [linkedServicesGetSample.js][linkedservicesgetsample]                                                                                     | Gets a linked service. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/LinkedServices_Get.json                                                                                                                                                                                                                                                                                                                                                                             |
| [linkedServicesListByFactorySample.js][linkedserviceslistbyfactorysample]                                                                 | Lists linked services. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/LinkedServices_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                   |
| [managedPrivateEndpointsCreateOrUpdateSample.js][managedprivateendpointscreateorupdatesample]                                             | Creates or updates a managed private endpoint. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ManagedPrivateEndpoints_Create.json                                                                                                                                                                                                                                                                                                                                         |
| [managedPrivateEndpointsDeleteSample.js][managedprivateendpointsdeletesample]                                                             | Deletes a managed private endpoint. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ManagedPrivateEndpoints_Delete.json                                                                                                                                                                                                                                                                                                                                                    |
| [managedPrivateEndpointsGetSample.js][managedprivateendpointsgetsample]                                                                   | Gets a managed private endpoint. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ManagedPrivateEndpoints_Get.json                                                                                                                                                                                                                                                                                                                                                          |
| [managedPrivateEndpointsListByFactorySample.js][managedprivateendpointslistbyfactorysample]                                               | Lists managed private endpoints. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ManagedPrivateEndpoints_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                |
| [managedVirtualNetworksCreateOrUpdateSample.js][managedvirtualnetworkscreateorupdatesample]                                               | Creates or updates a managed Virtual Network. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ManagedVirtualNetworks_Create.json                                                                                                                                                                                                                                                                                                                                           |
| [managedVirtualNetworksGetSample.js][managedvirtualnetworksgetsample]                                                                     | Gets a managed Virtual Network. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ManagedVirtualNetworks_Get.json                                                                                                                                                                                                                                                                                                                                                            |
| [managedVirtualNetworksListByFactorySample.js][managedvirtualnetworkslistbyfactorysample]                                                 | Lists managed Virtual Networks. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ManagedVirtualNetworks_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                  |
| [operationsListSample.js][operationslistsample]                                                                                           | Lists the available Azure Data Factory API operations. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Operations_List.json                                                                                                                                                                                                                                                                                                                                                |
| [pipelineRunsCancelSample.js][pipelinerunscancelsample]                                                                                   | Cancel a pipeline run by its run ID. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/PipelineRuns_Cancel.json                                                                                                                                                                                                                                                                                                                                                              |
| [pipelineRunsGetSample.js][pipelinerunsgetsample]                                                                                         | Get a pipeline run by its run ID. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/PipelineRuns_Get.json                                                                                                                                                                                                                                                                                                                                                                    |
| [pipelineRunsQueryByFactorySample.js][pipelinerunsquerybyfactorysample]                                                                   | Query pipeline runs in the factory based on input filter conditions. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/PipelineRuns_QueryByFactory.json                                                                                                                                                                                                                                                                                                                      |
| [pipelinesCreateOrUpdateSample.js][pipelinescreateorupdatesample]                                                                         | Creates or updates a pipeline. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Pipelines_Create.json                                                                                                                                                                                                                                                                                                                                                                       |
| [pipelinesCreateRunSample.js][pipelinescreaterunsample]                                                                                   | Creates a run of a pipeline. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Pipelines_CreateRun.json                                                                                                                                                                                                                                                                                                                                                                      |
| [pipelinesDeleteSample.js][pipelinesdeletesample]                                                                                         | Deletes a pipeline. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Pipelines_Delete.json                                                                                                                                                                                                                                                                                                                                                                                  |
| [pipelinesGetSample.js][pipelinesgetsample]                                                                                               | Gets a pipeline. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Pipelines_Get.json                                                                                                                                                                                                                                                                                                                                                                                        |
| [pipelinesListByFactorySample.js][pipelineslistbyfactorysample]                                                                           | Lists pipelines. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Pipelines_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                              |
| [privateEndPointConnectionsListByFactorySample.js][privateendpointconnectionslistbyfactorysample]                                         | Lists Private endpoint connections x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/PrivateEndPointConnections_ListByFactory.json                                                                                                                                                                                                                                                                                                                                           |
| [privateEndpointConnectionCreateOrUpdateSample.js][privateendpointconnectioncreateorupdatesample]                                         | Approves or rejects a private endpoint connection x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/ApproveRejectPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                              |
| [privateEndpointConnectionDeleteSample.js][privateendpointconnectiondeletesample]                                                         | Deletes a private endpoint connection x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/DeletePrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                                                 |
| [privateEndpointConnectionGetSample.js][privateendpointconnectiongetsample]                                                               | Gets a private endpoint connection x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/GetPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                                                       |
| [privateLinkResourcesGetSample.js][privatelinkresourcesgetsample]                                                                         | Gets the private link resources x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/GetPrivateLinkResources.json                                                                                                                                                                                                                                                                                                                                                               |
| [triggerRunsCancelSample.js][triggerrunscancelsample]                                                                                     | Cancel a single trigger instance by runId. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/TriggerRuns_Cancel.json                                                                                                                                                                                                                                                                                                                                                         |
| [triggerRunsQueryByFactorySample.js][triggerrunsquerybyfactorysample]                                                                     | Query trigger runs. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/TriggerRuns_QueryByFactory.json                                                                                                                                                                                                                                                                                                                                                                        |
| [triggerRunsRerunSample.js][triggerrunsrerunsample]                                                                                       | Rerun single trigger instance by runId. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/TriggerRuns_Rerun.json                                                                                                                                                                                                                                                                                                                                                             |
| [triggersCreateOrUpdateSample.js][triggerscreateorupdatesample]                                                                           | Creates or updates a trigger. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_Create.json                                                                                                                                                                                                                                                                                                                                                                         |
| [triggersDeleteSample.js][triggersdeletesample]                                                                                           | Deletes a trigger. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_Delete.json                                                                                                                                                                                                                                                                                                                                                                                    |
| [triggersGetEventSubscriptionStatusSample.js][triggersgeteventsubscriptionstatussample]                                                   | Get a trigger's event subscription status. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_GetEventSubscriptionStatus.json                                                                                                                                                                                                                                                                                                                                        |
| [triggersGetSample.js][triggersgetsample]                                                                                                 | Gets a trigger. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_Get.json                                                                                                                                                                                                                                                                                                                                                                                          |
| [triggersListByFactorySample.js][triggerslistbyfactorysample]                                                                             | Lists triggers. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                                |
| [triggersQueryByFactorySample.js][triggersquerybyfactorysample]                                                                           | Query triggers. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_QueryByFactory.json                                                                                                                                                                                                                                                                                                                                                                               |
| [triggersStartSample.js][triggersstartsample]                                                                                             | Starts a trigger. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_Start.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [triggersStopSample.js][triggersstopsample]                                                                                               | Stops a trigger. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_Stop.json                                                                                                                                                                                                                                                                                                                                                                                        |
| [triggersSubscribeToEventsSample.js][triggerssubscribetoeventssample]                                                                     | Subscribe event trigger to events. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_SubscribeToEvents.json                                                                                                                                                                                                                                                                                                                                                         |
| [triggersUnsubscribeFromEventsSample.js][triggersunsubscribefromeventssample]                                                             | Unsubscribe event trigger from events. x-ms-original-file: specification/datafactory/resource-manager/Microsoft.DataFactory/stable/2018-06-01/examples/Triggers_UnsubscribeFromEvents.json                                                                                                                                                                                                                                                                                                                                                 |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node activityRunsQueryByPipelineRunSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env DATAFACTORY_SUBSCRIPTION_ID="<datafactory subscription id>" DATAFACTORY_RESOURCE_GROUP="<datafactory resource group>" node activityRunsQueryByPipelineRunSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[activityrunsquerybypipelinerunsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/activityRunsQueryByPipelineRunSample.js
[dataflowdebugsessionadddataflowsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/dataFlowDebugSessionAddDataFlowSample.js
[dataflowdebugsessioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/dataFlowDebugSessionCreateSample.js
[dataflowdebugsessiondeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/dataFlowDebugSessionDeleteSample.js
[dataflowdebugsessionexecutecommandsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/dataFlowDebugSessionExecuteCommandSample.js
[dataflowdebugsessionquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/dataFlowDebugSessionQueryByFactorySample.js
[dataflowscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/dataFlowsCreateOrUpdateSample.js
[dataflowsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/dataFlowsDeleteSample.js
[dataflowsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/dataFlowsGetSample.js
[dataflowslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/dataFlowsListByFactorySample.js
[datasetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/datasetsCreateOrUpdateSample.js
[datasetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/datasetsDeleteSample.js
[datasetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/datasetsGetSample.js
[datasetslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/datasetsListByFactorySample.js
[exposurecontrolgetfeaturevaluebyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/exposureControlGetFeatureValueByFactorySample.js
[exposurecontrolgetfeaturevaluesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/exposureControlGetFeatureValueSample.js
[exposurecontrolqueryfeaturevaluesbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/exposureControlQueryFeatureValuesByFactorySample.js
[factoriesconfigurefactoryreposample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/factoriesConfigureFactoryRepoSample.js
[factoriescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/factoriesCreateOrUpdateSample.js
[factoriesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/factoriesDeleteSample.js
[factoriesgetdataplaneaccesssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/factoriesGetDataPlaneAccessSample.js
[factoriesgetgithubaccesstokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/factoriesGetGitHubAccessTokenSample.js
[factoriesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/factoriesGetSample.js
[factorieslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/factoriesListByResourceGroupSample.js
[factorieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/factoriesListSample.js
[factoriesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/factoriesUpdateSample.js
[globalparameterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/globalParametersCreateOrUpdateSample.js
[globalparametersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/globalParametersDeleteSample.js
[globalparametersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/globalParametersGetSample.js
[globalparameterslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/globalParametersListByFactorySample.js
[integrationruntimenodesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimeNodesDeleteSample.js
[integrationruntimenodesgetipaddresssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimeNodesGetIPAddressSample.js
[integrationruntimenodesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimeNodesGetSample.js
[integrationruntimenodesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimeNodesUpdateSample.js
[integrationruntimeobjectmetadatagetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimeObjectMetadataGetSample.js
[integrationruntimeobjectmetadatarefreshsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimeObjectMetadataRefreshSample.js
[integrationruntimescreatelinkedintegrationruntimesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesCreateLinkedIntegrationRuntimeSample.js
[integrationruntimescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesCreateOrUpdateSample.js
[integrationruntimesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesDeleteSample.js
[integrationruntimesgetconnectioninfosample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesGetConnectionInfoSample.js
[integrationruntimesgetmonitoringdatasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesGetMonitoringDataSample.js
[integrationruntimesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesGetSample.js
[integrationruntimesgetstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesGetStatusSample.js
[integrationruntimeslistauthkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesListAuthKeysSample.js
[integrationruntimeslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesListByFactorySample.js
[integrationruntimeslistoutboundnetworkdependenciesendpointssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesListOutboundNetworkDependenciesEndpointsSample.js
[integrationruntimesregenerateauthkeysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesRegenerateAuthKeySample.js
[integrationruntimesremovelinkssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesRemoveLinksSample.js
[integrationruntimesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesStartSample.js
[integrationruntimesstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesStopSample.js
[integrationruntimessynccredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesSyncCredentialsSample.js
[integrationruntimesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesUpdateSample.js
[integrationruntimesupgradesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/integrationRuntimesUpgradeSample.js
[linkedservicescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/linkedServicesCreateOrUpdateSample.js
[linkedservicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/linkedServicesDeleteSample.js
[linkedservicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/linkedServicesGetSample.js
[linkedserviceslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/linkedServicesListByFactorySample.js
[managedprivateendpointscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/managedPrivateEndpointsCreateOrUpdateSample.js
[managedprivateendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/managedPrivateEndpointsDeleteSample.js
[managedprivateendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/managedPrivateEndpointsGetSample.js
[managedprivateendpointslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/managedPrivateEndpointsListByFactorySample.js
[managedvirtualnetworkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/managedVirtualNetworksCreateOrUpdateSample.js
[managedvirtualnetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/managedVirtualNetworksGetSample.js
[managedvirtualnetworkslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/managedVirtualNetworksListByFactorySample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/operationsListSample.js
[pipelinerunscancelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/pipelineRunsCancelSample.js
[pipelinerunsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/pipelineRunsGetSample.js
[pipelinerunsquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/pipelineRunsQueryByFactorySample.js
[pipelinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/pipelinesCreateOrUpdateSample.js
[pipelinescreaterunsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/pipelinesCreateRunSample.js
[pipelinesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/pipelinesDeleteSample.js
[pipelinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/pipelinesGetSample.js
[pipelineslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/pipelinesListByFactorySample.js
[privateendpointconnectionslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/privateEndPointConnectionsListByFactorySample.js
[privateendpointconnectioncreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/privateEndpointConnectionCreateOrUpdateSample.js
[privateendpointconnectiondeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/privateEndpointConnectionDeleteSample.js
[privateendpointconnectiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/privateEndpointConnectionGetSample.js
[privatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/privateLinkResourcesGetSample.js
[triggerrunscancelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/triggerRunsCancelSample.js
[triggerrunsquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/triggerRunsQueryByFactorySample.js
[triggerrunsrerunsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/triggerRunsRerunSample.js
[triggerscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/triggersCreateOrUpdateSample.js
[triggersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/triggersDeleteSample.js
[triggersgeteventsubscriptionstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/triggersGetEventSubscriptionStatusSample.js
[triggersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/triggersGetSample.js
[triggerslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/triggersListByFactorySample.js
[triggersquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/triggersQueryByFactorySample.js
[triggersstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/triggersStartSample.js
[triggersstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/triggersStopSample.js
[triggerssubscribetoeventssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/triggersSubscribeToEventsSample.js
[triggersunsubscribefromeventssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v10/javascript/triggersUnsubscribeFromEventsSample.js
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-datafactory?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/datafactory/arm-datafactory/README.md
