sdk/datafactory/arm-datafactory/samples/v20/javascript/README.md
# @azure/arm-datafactory client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-datafactory in some common scenarios.

| **File Name**                                                                                                                             | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| ----------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [activityRunsQueryByPipelineRunSample.js][activityrunsquerybypipelinerunsample]                                                           | query activity runs based on input filter conditions. x-ms-original-file: 2018-06-01/ActivityRuns_QueryByPipelineRun.json                                                                                                                                                                                                                                                                                                                                 |
| [changeDataCaptureCreateOrUpdateSample.js][changedatacapturecreateorupdatesample]                                                         | creates or updates a change data capture resource. x-ms-original-file: 2018-06-01/ChangeDataCapture_Create.json                                                                                                                                                                                                                                                                                                                                           |
| [changeDataCaptureDeleteSample.js][changedatacapturedeletesample]                                                                         | deletes a change data capture. x-ms-original-file: 2018-06-01/ChangeDataCapture_Delete.json                                                                                                                                                                                                                                                                                                                                                               |
| [changeDataCaptureGetSample.js][changedatacapturegetsample]                                                                               | gets a change data capture. x-ms-original-file: 2018-06-01/ChangeDataCapture_Get.json                                                                                                                                                                                                                                                                                                                                                                     |
| [changeDataCaptureListByFactorySample.js][changedatacapturelistbyfactorysample]                                                           | lists all resources of type change data capture. x-ms-original-file: 2018-06-01/ChangeDataCapture_ListByFactory.json                                                                                                                                                                                                                                                                                                                                      |
| [changeDataCaptureStartSample.js][changedatacapturestartsample]                                                                           | starts a change data capture. x-ms-original-file: 2018-06-01/ChangeDataCapture_Start.json                                                                                                                                                                                                                                                                                                                                                                 |
| [changeDataCaptureStatusSample.js][changedatacapturestatussample]                                                                         | gets the current status for the change data capture resource. x-ms-original-file: 2018-06-01/ChangeDataCapture_Status.json                                                                                                                                                                                                                                                                                                                                |
| [changeDataCaptureStopSample.js][changedatacapturestopsample]                                                                             | stops a change data capture. x-ms-original-file: 2018-06-01/ChangeDataCapture_Stop.json                                                                                                                                                                                                                                                                                                                                                                   |
| [credentialOperationsCreateOrUpdateSample.js][credentialoperationscreateorupdatesample]                                                   | creates or updates a credential. x-ms-original-file: 2018-06-01/Credentials_Create.json                                                                                                                                                                                                                                                                                                                                                                   |
| [credentialOperationsDeleteSample.js][credentialoperationsdeletesample]                                                                   | deletes a credential. x-ms-original-file: 2018-06-01/Credentials_Delete.json                                                                                                                                                                                                                                                                                                                                                                              |
| [credentialOperationsGetSample.js][credentialoperationsgetsample]                                                                         | gets a credential. x-ms-original-file: 2018-06-01/Credentials_Get.json                                                                                                                                                                                                                                                                                                                                                                                    |
| [credentialOperationsListByFactorySample.js][credentialoperationslistbyfactorysample]                                                     | list credentials. x-ms-original-file: 2018-06-01/Credentials_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                           |
| [dataFlowDebugSessionAddDataFlowSample.js][dataflowdebugsessionadddataflowsample]                                                         | add a data flow into debug session. x-ms-original-file: 2018-06-01/DataFlowDebugSession_AddDataFlow.json                                                                                                                                                                                                                                                                                                                                                  |
| [dataFlowDebugSessionCreateSample.js][dataflowdebugsessioncreatesample]                                                                   | creates a data flow debug session. x-ms-original-file: 2018-06-01/DataFlowDebugSession_Create.json                                                                                                                                                                                                                                                                                                                                                        |
| [dataFlowDebugSessionDeleteSample.js][dataflowdebugsessiondeletesample]                                                                   | deletes a data flow debug session. x-ms-original-file: 2018-06-01/DataFlowDebugSession_Delete.json                                                                                                                                                                                                                                                                                                                                                        |
| [dataFlowDebugSessionExecuteCommandSample.js][dataflowdebugsessionexecutecommandsample]                                                   | execute a data flow debug command. x-ms-original-file: 2018-06-01/DataFlowDebugSession_ExecuteCommand.json                                                                                                                                                                                                                                                                                                                                                |
| [dataFlowDebugSessionQueryByFactorySample.js][dataflowdebugsessionquerybyfactorysample]                                                   | query all active data flow debug sessions. x-ms-original-file: 2018-06-01/DataFlowDebugSession_QueryByFactory.json                                                                                                                                                                                                                                                                                                                                        |
| [dataFlowsCreateOrUpdateSample.js][dataflowscreateorupdatesample]                                                                         | creates or updates a data flow. x-ms-original-file: 2018-06-01/DataFlows_Create.json                                                                                                                                                                                                                                                                                                                                                                      |
| [dataFlowsDeleteSample.js][dataflowsdeletesample]                                                                                         | deletes a data flow. x-ms-original-file: 2018-06-01/DataFlows_Delete.json                                                                                                                                                                                                                                                                                                                                                                                 |
| [dataFlowsGetSample.js][dataflowsgetsample]                                                                                               | gets a data flow. x-ms-original-file: 2018-06-01/DataFlows_Get.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [dataFlowsListByFactorySample.js][dataflowslistbyfactorysample]                                                                           | lists data flows. x-ms-original-file: 2018-06-01/DataFlows_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                             |
| [datasetsCreateOrUpdateSample.js][datasetscreateorupdatesample]                                                                           | creates or updates a dataset. x-ms-original-file: 2018-06-01/Datasets_Create.json                                                                                                                                                                                                                                                                                                                                                                         |
| [datasetsDeleteSample.js][datasetsdeletesample]                                                                                           | deletes a dataset. x-ms-original-file: 2018-06-01/Datasets_Delete.json                                                                                                                                                                                                                                                                                                                                                                                    |
| [datasetsGetSample.js][datasetsgetsample]                                                                                                 | gets a dataset. x-ms-original-file: 2018-06-01/Datasets_Get.json                                                                                                                                                                                                                                                                                                                                                                                          |
| [datasetsListByFactorySample.js][datasetslistbyfactorysample]                                                                             | lists datasets. x-ms-original-file: 2018-06-01/Datasets_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                                |
| [exposureControlGetFeatureValueByFactorySample.js][exposurecontrolgetfeaturevaluebyfactorysample]                                         | get exposure control feature for specific factory. x-ms-original-file: 2018-06-01/ExposureControl_GetFeatureValueByFactory.json                                                                                                                                                                                                                                                                                                                           |
| [exposureControlGetFeatureValueSample.js][exposurecontrolgetfeaturevaluesample]                                                           | get exposure control feature for specific location. x-ms-original-file: 2018-06-01/ExposureControl_GetFeatureValue.json                                                                                                                                                                                                                                                                                                                                   |
| [exposureControlQueryFeatureValuesByFactorySample.js][exposurecontrolqueryfeaturevaluesbyfactorysample]                                   | get list of exposure control features for specific factory. x-ms-original-file: 2018-06-01/ExposureControl_QueryFeatureValuesByFactory.json                                                                                                                                                                                                                                                                                                               |
| [factoriesConfigureFactoryRepoSample.js][factoriesconfigurefactoryreposample]                                                             | updates a factory's repo information. x-ms-original-file: 2018-06-01/Factories_ConfigureFactoryRepo.json                                                                                                                                                                                                                                                                                                                                                  |
| [factoriesCreateOrUpdateSample.js][factoriescreateorupdatesample]                                                                         | creates or updates a factory. x-ms-original-file: 2018-06-01/Factories_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                |
| [factoriesDeleteSample.js][factoriesdeletesample]                                                                                         | deletes a factory. x-ms-original-file: 2018-06-01/Factories_Delete.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [factoriesGetDataPlaneAccessSample.js][factoriesgetdataplaneaccesssample]                                                                 | get Data Plane access. x-ms-original-file: 2018-06-01/Factories_GetDataPlaneAccess.json                                                                                                                                                                                                                                                                                                                                                                   |
| [factoriesGetGitHubAccessTokenSample.js][factoriesgetgithubaccesstokensample]                                                             | get GitHub Access Token. x-ms-original-file: 2018-06-01/Factories_GetGitHubAccessToken.json                                                                                                                                                                                                                                                                                                                                                               |
| [factoriesGetSample.js][factoriesgetsample]                                                                                               | gets a factory. x-ms-original-file: 2018-06-01/Factories_Get.json                                                                                                                                                                                                                                                                                                                                                                                         |
| [factoriesListByResourceGroupSample.js][factorieslistbyresourcegroupsample]                                                               | lists factories. x-ms-original-file: 2018-06-01/Factories_ListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                        |
| [factoriesListSample.js][factorieslistsample]                                                                                             | lists factories under the specified subscription. x-ms-original-file: 2018-06-01/Factories_List.json                                                                                                                                                                                                                                                                                                                                                      |
| [factoriesUpdateSample.js][factoriesupdatesample]                                                                                         | updates a factory. x-ms-original-file: 2018-06-01/Factories_Update.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [globalParametersCreateOrUpdateSample.js][globalparameterscreateorupdatesample]                                                           | creates or updates a Global parameter x-ms-original-file: 2018-06-01/GlobalParameters_Create.json                                                                                                                                                                                                                                                                                                                                                         |
| [globalParametersDeleteSample.js][globalparametersdeletesample]                                                                           | deletes a Global parameter x-ms-original-file: 2018-06-01/GlobalParameters_Delete.json                                                                                                                                                                                                                                                                                                                                                                    |
| [globalParametersGetSample.js][globalparametersgetsample]                                                                                 | gets a Global parameter x-ms-original-file: 2018-06-01/GlobalParameters_Get.json                                                                                                                                                                                                                                                                                                                                                                          |
| [globalParametersListByFactorySample.js][globalparameterslistbyfactorysample]                                                             | lists Global parameters x-ms-original-file: 2018-06-01/GlobalParameters_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                |
| [integrationRuntimeDisableInteractiveQuerySample.js][integrationruntimedisableinteractivequerysample]                                     | disable interactive authoring of Managed Virtual Network integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_DisableInteractiveQuery.json                                                                                                                                                                                                                                                                                             |
| [integrationRuntimeEnableInteractiveQuerySample.js][integrationruntimeenableinteractivequerysample]                                       | enable interactive authoring of Managed Virtual Network integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_EnableInteractiveQuery.json                                                                                                                                                                                                                                                                                               |
| [integrationRuntimeNodesDeleteSample.js][integrationruntimenodesdeletesample]                                                             | deletes a self-hosted integration runtime node. x-ms-original-file: 2018-06-01/IntegrationRuntimeNodes_Delete.json                                                                                                                                                                                                                                                                                                                                        |
| [integrationRuntimeNodesGetIpAddressSample.js][integrationruntimenodesgetipaddresssample]                                                 | get the IP address of self-hosted integration runtime node. x-ms-original-file: 2018-06-01/IntegrationRuntimeNodes_GetIpAddress.json                                                                                                                                                                                                                                                                                                                      |
| [integrationRuntimeNodesGetSample.js][integrationruntimenodesgetsample]                                                                   | gets a self-hosted integration runtime node. x-ms-original-file: 2018-06-01/IntegrationRuntimeNodes_Get.json                                                                                                                                                                                                                                                                                                                                              |
| [integrationRuntimeNodesUpdateSample.js][integrationruntimenodesupdatesample]                                                             | updates a self-hosted integration runtime node. x-ms-original-file: 2018-06-01/IntegrationRuntimeNodes_Update.json                                                                                                                                                                                                                                                                                                                                        |
| [integrationRuntimeObjectMetadataGetSample.js][integrationruntimeobjectmetadatagetsample]                                                 | get a SSIS integration runtime object metadata by specified path. The return is pageable metadata list. x-ms-original-file: 2018-06-01/IntegrationRuntimeObjectMetadata_Get.json                                                                                                                                                                                                                                                                          |
| [integrationRuntimeObjectMetadataRefreshSample.js][integrationruntimeobjectmetadatarefreshsample]                                         | refresh a SSIS integration runtime object metadata. x-ms-original-file: 2018-06-01/IntegrationRuntimeObjectMetadata_Refresh.json                                                                                                                                                                                                                                                                                                                          |
| [integrationRuntimesCreateLinkedIntegrationRuntimeSample.js][integrationruntimescreatelinkedintegrationruntimesample]                     | create a linked integration runtime entry in a shared integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_CreateLinkedIntegrationRuntime.json                                                                                                                                                                                                                                                                                         |
| [integrationRuntimesCreateOrUpdateSample.js][integrationruntimescreateorupdatesample]                                                     | creates or updates an integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_Create.json                                                                                                                                                                                                                                                                                                                                                 |
| [integrationRuntimesDeleteSample.js][integrationruntimesdeletesample]                                                                     | deletes an integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_Delete.json                                                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesGetConnectionInfoSample.js][integrationruntimesgetconnectioninfosample]                                               | gets the on-premises integration runtime connection information for encrypting the on-premises data source credentials. x-ms-original-file: 2018-06-01/IntegrationRuntimes_GetConnectionInfo.json                                                                                                                                                                                                                                                         |
| [integrationRuntimesGetMonitoringDataSample.js][integrationruntimesgetmonitoringdatasample]                                               | get the integration runtime monitoring data, which includes the monitor data for all the nodes under this integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_GetMonitoringData.json                                                                                                                                                                                                                                                  |
| [integrationRuntimesGetSample.js][integrationruntimesgetsample]                                                                           | gets an integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_Get.json                                                                                                                                                                                                                                                                                                                                                                  |
| [integrationRuntimesGetStatusSample.js][integrationruntimesgetstatussample]                                                               | gets detailed status information for an integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_GetStatus.json                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesListAuthKeysSample.js][integrationruntimeslistauthkeyssample]                                                         | retrieves the authentication keys for an integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_ListAuthKeys.json                                                                                                                                                                                                                                                                                                                        |
| [integrationRuntimesListByFactorySample.js][integrationruntimeslistbyfactorysample]                                                       | lists integration runtimes. x-ms-original-file: 2018-06-01/IntegrationRuntimes_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                         |
| [integrationRuntimesListOutboundNetworkDependenciesEndpointsSample.js][integrationruntimeslistoutboundnetworkdependenciesendpointssample] | gets the list of outbound network dependencies for a given Azure-SSIS integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_ListOutboundNetworkDependenciesEndpoints.json                                                                                                                                                                                                                                                               |
| [integrationRuntimesRegenerateAuthKeySample.js][integrationruntimesregenerateauthkeysample]                                               | regenerates the authentication key for an integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_RegenerateAuthKey.json                                                                                                                                                                                                                                                                                                                  |
| [integrationRuntimesRemoveLinksSample.js][integrationruntimesremovelinkssample]                                                           | remove all linked integration runtimes under specific data factory in a self-hosted integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_RemoveLinks.json                                                                                                                                                                                                                                                                              |
| [integrationRuntimesStartSample.js][integrationruntimesstartsample]                                                                       | starts a ManagedReserved type integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_Start.json                                                                                                                                                                                                                                                                                                                                          |
| [integrationRuntimesStopSample.js][integrationruntimesstopsample]                                                                         | stops a ManagedReserved type integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_Stop.json                                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesSyncCredentialsSample.js][integrationruntimessynccredentialssample]                                                   | force the integration runtime to synchronize credentials across integration runtime nodes, and this will override the credentials across all worker nodes with those available on the dispatcher node. If you already have the latest credential backup file, you should manually import it (preferred) on any self-hosted integration runtime node than using this API directly. x-ms-original-file: 2018-06-01/IntegrationRuntimes_SyncCredentials.json |
| [integrationRuntimesUpdateSample.js][integrationruntimesupdatesample]                                                                     | updates an integration runtime. x-ms-original-file: 2018-06-01/IntegrationRuntimes_Update.json                                                                                                                                                                                                                                                                                                                                                            |
| [integrationRuntimesUpgradeSample.js][integrationruntimesupgradesample]                                                                   | upgrade self-hosted integration runtime to latest version if availability. x-ms-original-file: 2018-06-01/IntegrationRuntimes_Upgrade.json                                                                                                                                                                                                                                                                                                                |
| [linkedServicesCreateOrUpdateSample.js][linkedservicescreateorupdatesample]                                                               | creates or updates a linked service. x-ms-original-file: 2018-06-01/LinkedServices_Create.json                                                                                                                                                                                                                                                                                                                                                            |
| [linkedServicesDeleteSample.js][linkedservicesdeletesample]                                                                               | deletes a linked service. x-ms-original-file: 2018-06-01/LinkedServices_Delete.json                                                                                                                                                                                                                                                                                                                                                                       |
| [linkedServicesGetSample.js][linkedservicesgetsample]                                                                                     | gets a linked service. x-ms-original-file: 2018-06-01/LinkedServices_Get.json                                                                                                                                                                                                                                                                                                                                                                             |
| [linkedServicesListByFactorySample.js][linkedserviceslistbyfactorysample]                                                                 | lists linked services. x-ms-original-file: 2018-06-01/LinkedServices_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                   |
| [managedPrivateEndpointsCreateOrUpdateSample.js][managedprivateendpointscreateorupdatesample]                                             | creates or updates a managed private endpoint. x-ms-original-file: 2018-06-01/ManagedPrivateEndpoints_Create.json                                                                                                                                                                                                                                                                                                                                         |
| [managedPrivateEndpointsDeleteSample.js][managedprivateendpointsdeletesample]                                                             | deletes a managed private endpoint. x-ms-original-file: 2018-06-01/ManagedPrivateEndpoints_Delete.json                                                                                                                                                                                                                                                                                                                                                    |
| [managedPrivateEndpointsGetSample.js][managedprivateendpointsgetsample]                                                                   | gets a managed private endpoint. x-ms-original-file: 2018-06-01/ManagedPrivateEndpoints_Get.json                                                                                                                                                                                                                                                                                                                                                          |
| [managedPrivateEndpointsListByFactorySample.js][managedprivateendpointslistbyfactorysample]                                               | lists managed private endpoints. x-ms-original-file: 2018-06-01/ManagedPrivateEndpoints_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                |
| [managedVirtualNetworksCreateOrUpdateSample.js][managedvirtualnetworkscreateorupdatesample]                                               | creates or updates a managed Virtual Network. x-ms-original-file: 2018-06-01/ManagedVirtualNetworks_Create.json                                                                                                                                                                                                                                                                                                                                           |
| [managedVirtualNetworksGetSample.js][managedvirtualnetworksgetsample]                                                                     | gets a managed Virtual Network. x-ms-original-file: 2018-06-01/ManagedVirtualNetworks_Get.json                                                                                                                                                                                                                                                                                                                                                            |
| [managedVirtualNetworksListByFactorySample.js][managedvirtualnetworkslistbyfactorysample]                                                 | lists managed Virtual Networks. x-ms-original-file: 2018-06-01/ManagedVirtualNetworks_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                  |
| [operationsListSample.js][operationslistsample]                                                                                           | lists the available Azure Data Factory API operations. x-ms-original-file: 2018-06-01/Operations_List.json                                                                                                                                                                                                                                                                                                                                                |
| [pipelineRunsCancelSample.js][pipelinerunscancelsample]                                                                                   | cancel a pipeline run by its run ID. x-ms-original-file: 2018-06-01/PipelineRuns_Cancel.json                                                                                                                                                                                                                                                                                                                                                              |
| [pipelineRunsGetSample.js][pipelinerunsgetsample]                                                                                         | get a pipeline run by its run ID. x-ms-original-file: 2018-06-01/PipelineRuns_Get.json                                                                                                                                                                                                                                                                                                                                                                    |
| [pipelineRunsQueryByFactorySample.js][pipelinerunsquerybyfactorysample]                                                                   | query pipeline runs in the factory based on input filter conditions. x-ms-original-file: 2018-06-01/PipelineRuns_QueryByFactory.json                                                                                                                                                                                                                                                                                                                      |
| [pipelinesCreateOrUpdateSample.js][pipelinescreateorupdatesample]                                                                         | creates or updates a pipeline. x-ms-original-file: 2018-06-01/Pipelines_Create.json                                                                                                                                                                                                                                                                                                                                                                       |
| [pipelinesCreateRunSample.js][pipelinescreaterunsample]                                                                                   | creates a run of a pipeline. x-ms-original-file: 2018-06-01/Pipelines_CreateRun.json                                                                                                                                                                                                                                                                                                                                                                      |
| [pipelinesDeleteSample.js][pipelinesdeletesample]                                                                                         | deletes a pipeline. x-ms-original-file: 2018-06-01/Pipelines_Delete.json                                                                                                                                                                                                                                                                                                                                                                                  |
| [pipelinesGetSample.js][pipelinesgetsample]                                                                                               | gets a pipeline. x-ms-original-file: 2018-06-01/Pipelines_Get.json                                                                                                                                                                                                                                                                                                                                                                                        |
| [pipelinesListByFactorySample.js][pipelineslistbyfactorysample]                                                                           | lists pipelines. x-ms-original-file: 2018-06-01/Pipelines_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                              |
| [privateEndPointConnectionsListByFactorySample.js][privateendpointconnectionslistbyfactorysample]                                         | lists Private endpoint connections x-ms-original-file: 2018-06-01/PrivateEndPointConnections_ListByFactory.json                                                                                                                                                                                                                                                                                                                                           |
| [privateEndpointConnectionCreateOrUpdateSample.js][privateendpointconnectioncreateorupdatesample]                                         | approves or rejects a private endpoint connection x-ms-original-file: 2018-06-01/ApproveRejectPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                              |
| [privateEndpointConnectionDeleteSample.js][privateendpointconnectiondeletesample]                                                         | deletes a private endpoint connection x-ms-original-file: 2018-06-01/DeletePrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                                                 |
| [privateEndpointConnectionGetSample.js][privateendpointconnectiongetsample]                                                               | gets a private endpoint connection x-ms-original-file: 2018-06-01/GetPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                                                       |
| [privateLinkResourcesGetSample.js][privatelinkresourcesgetsample]                                                                         | gets the private link resources x-ms-original-file: 2018-06-01/GetPrivateLinkResources.json                                                                                                                                                                                                                                                                                                                                                               |
| [triggerRunsCancelSample.js][triggerrunscancelsample]                                                                                     | cancel a single trigger instance by runId. x-ms-original-file: 2018-06-01/TriggerRuns_Cancel.json                                                                                                                                                                                                                                                                                                                                                         |
| [triggerRunsQueryByFactorySample.js][triggerrunsquerybyfactorysample]                                                                     | query trigger runs. x-ms-original-file: 2018-06-01/TriggerRuns_QueryByFactory.json                                                                                                                                                                                                                                                                                                                                                                        |
| [triggerRunsRerunSample.js][triggerrunsrerunsample]                                                                                       | rerun single trigger instance by runId. x-ms-original-file: 2018-06-01/TriggerRuns_Rerun.json                                                                                                                                                                                                                                                                                                                                                             |
| [triggersCreateOrUpdateSample.js][triggerscreateorupdatesample]                                                                           | creates or updates a trigger. x-ms-original-file: 2018-06-01/Triggers_Create.json                                                                                                                                                                                                                                                                                                                                                                         |
| [triggersDeleteSample.js][triggersdeletesample]                                                                                           | deletes a trigger. x-ms-original-file: 2018-06-01/Triggers_Delete.json                                                                                                                                                                                                                                                                                                                                                                                    |
| [triggersGetEventSubscriptionStatusSample.js][triggersgeteventsubscriptionstatussample]                                                   | get a trigger's event subscription status. x-ms-original-file: 2018-06-01/Triggers_GetEventSubscriptionStatus.json                                                                                                                                                                                                                                                                                                                                        |
| [triggersGetSample.js][triggersgetsample]                                                                                                 | gets a trigger. x-ms-original-file: 2018-06-01/Triggers_Get.json                                                                                                                                                                                                                                                                                                                                                                                          |
| [triggersListByFactorySample.js][triggerslistbyfactorysample]                                                                             | lists triggers. x-ms-original-file: 2018-06-01/Triggers_ListByFactory.json                                                                                                                                                                                                                                                                                                                                                                                |
| [triggersQueryByFactorySample.js][triggersquerybyfactorysample]                                                                           | query triggers. x-ms-original-file: 2018-06-01/Triggers_QueryByFactory.json                                                                                                                                                                                                                                                                                                                                                                               |
| [triggersStartSample.js][triggersstartsample]                                                                                             | starts a trigger. x-ms-original-file: 2018-06-01/Triggers_Start.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [triggersStopSample.js][triggersstopsample]                                                                                               | stops a trigger. x-ms-original-file: 2018-06-01/Triggers_Stop.json                                                                                                                                                                                                                                                                                                                                                                                        |
| [triggersSubscribeToEventsSample.js][triggerssubscribetoeventssample]                                                                     | subscribe event trigger to events. x-ms-original-file: 2018-06-01/Triggers_SubscribeToEvents.json                                                                                                                                                                                                                                                                                                                                                         |
| [triggersUnsubscribeFromEventsSample.js][triggersunsubscribefromeventssample]                                                             | unsubscribe event trigger from events. x-ms-original-file: 2018-06-01/Triggers_UnsubscribeFromEvents.json                                                                                                                                                                                                                                                                                                                                                 |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node activityRunsQueryByPipelineRunSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node activityRunsQueryByPipelineRunSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[activityrunsquerybypipelinerunsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/activityRunsQueryByPipelineRunSample.js
[changedatacapturecreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/changeDataCaptureCreateOrUpdateSample.js
[changedatacapturedeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/changeDataCaptureDeleteSample.js
[changedatacapturegetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/changeDataCaptureGetSample.js
[changedatacapturelistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/changeDataCaptureListByFactorySample.js
[changedatacapturestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/changeDataCaptureStartSample.js
[changedatacapturestatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/changeDataCaptureStatusSample.js
[changedatacapturestopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/changeDataCaptureStopSample.js
[credentialoperationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/credentialOperationsCreateOrUpdateSample.js
[credentialoperationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/credentialOperationsDeleteSample.js
[credentialoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/credentialOperationsGetSample.js
[credentialoperationslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/credentialOperationsListByFactorySample.js
[dataflowdebugsessionadddataflowsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/dataFlowDebugSessionAddDataFlowSample.js
[dataflowdebugsessioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/dataFlowDebugSessionCreateSample.js
[dataflowdebugsessiondeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/dataFlowDebugSessionDeleteSample.js
[dataflowdebugsessionexecutecommandsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/dataFlowDebugSessionExecuteCommandSample.js
[dataflowdebugsessionquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/dataFlowDebugSessionQueryByFactorySample.js
[dataflowscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/dataFlowsCreateOrUpdateSample.js
[dataflowsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/dataFlowsDeleteSample.js
[dataflowsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/dataFlowsGetSample.js
[dataflowslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/dataFlowsListByFactorySample.js
[datasetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/datasetsCreateOrUpdateSample.js
[datasetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/datasetsDeleteSample.js
[datasetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/datasetsGetSample.js
[datasetslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/datasetsListByFactorySample.js
[exposurecontrolgetfeaturevaluebyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/exposureControlGetFeatureValueByFactorySample.js
[exposurecontrolgetfeaturevaluesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/exposureControlGetFeatureValueSample.js
[exposurecontrolqueryfeaturevaluesbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/exposureControlQueryFeatureValuesByFactorySample.js
[factoriesconfigurefactoryreposample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/factoriesConfigureFactoryRepoSample.js
[factoriescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/factoriesCreateOrUpdateSample.js
[factoriesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/factoriesDeleteSample.js
[factoriesgetdataplaneaccesssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/factoriesGetDataPlaneAccessSample.js
[factoriesgetgithubaccesstokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/factoriesGetGitHubAccessTokenSample.js
[factoriesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/factoriesGetSample.js
[factorieslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/factoriesListByResourceGroupSample.js
[factorieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/factoriesListSample.js
[factoriesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/factoriesUpdateSample.js
[globalparameterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/globalParametersCreateOrUpdateSample.js
[globalparametersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/globalParametersDeleteSample.js
[globalparametersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/globalParametersGetSample.js
[globalparameterslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/globalParametersListByFactorySample.js
[integrationruntimedisableinteractivequerysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimeDisableInteractiveQuerySample.js
[integrationruntimeenableinteractivequerysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimeEnableInteractiveQuerySample.js
[integrationruntimenodesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimeNodesDeleteSample.js
[integrationruntimenodesgetipaddresssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimeNodesGetIpAddressSample.js
[integrationruntimenodesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimeNodesGetSample.js
[integrationruntimenodesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimeNodesUpdateSample.js
[integrationruntimeobjectmetadatagetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimeObjectMetadataGetSample.js
[integrationruntimeobjectmetadatarefreshsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimeObjectMetadataRefreshSample.js
[integrationruntimescreatelinkedintegrationruntimesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesCreateLinkedIntegrationRuntimeSample.js
[integrationruntimescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesCreateOrUpdateSample.js
[integrationruntimesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesDeleteSample.js
[integrationruntimesgetconnectioninfosample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesGetConnectionInfoSample.js
[integrationruntimesgetmonitoringdatasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesGetMonitoringDataSample.js
[integrationruntimesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesGetSample.js
[integrationruntimesgetstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesGetStatusSample.js
[integrationruntimeslistauthkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesListAuthKeysSample.js
[integrationruntimeslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesListByFactorySample.js
[integrationruntimeslistoutboundnetworkdependenciesendpointssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesListOutboundNetworkDependenciesEndpointsSample.js
[integrationruntimesregenerateauthkeysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesRegenerateAuthKeySample.js
[integrationruntimesremovelinkssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesRemoveLinksSample.js
[integrationruntimesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesStartSample.js
[integrationruntimesstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesStopSample.js
[integrationruntimessynccredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesSyncCredentialsSample.js
[integrationruntimesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesUpdateSample.js
[integrationruntimesupgradesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/integrationRuntimesUpgradeSample.js
[linkedservicescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/linkedServicesCreateOrUpdateSample.js
[linkedservicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/linkedServicesDeleteSample.js
[linkedservicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/linkedServicesGetSample.js
[linkedserviceslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/linkedServicesListByFactorySample.js
[managedprivateendpointscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/managedPrivateEndpointsCreateOrUpdateSample.js
[managedprivateendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/managedPrivateEndpointsDeleteSample.js
[managedprivateendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/managedPrivateEndpointsGetSample.js
[managedprivateendpointslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/managedPrivateEndpointsListByFactorySample.js
[managedvirtualnetworkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/managedVirtualNetworksCreateOrUpdateSample.js
[managedvirtualnetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/managedVirtualNetworksGetSample.js
[managedvirtualnetworkslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/managedVirtualNetworksListByFactorySample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/operationsListSample.js
[pipelinerunscancelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/pipelineRunsCancelSample.js
[pipelinerunsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/pipelineRunsGetSample.js
[pipelinerunsquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/pipelineRunsQueryByFactorySample.js
[pipelinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/pipelinesCreateOrUpdateSample.js
[pipelinescreaterunsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/pipelinesCreateRunSample.js
[pipelinesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/pipelinesDeleteSample.js
[pipelinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/pipelinesGetSample.js
[pipelineslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/pipelinesListByFactorySample.js
[privateendpointconnectionslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/privateEndPointConnectionsListByFactorySample.js
[privateendpointconnectioncreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/privateEndpointConnectionCreateOrUpdateSample.js
[privateendpointconnectiondeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/privateEndpointConnectionDeleteSample.js
[privateendpointconnectiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/privateEndpointConnectionGetSample.js
[privatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/privateLinkResourcesGetSample.js
[triggerrunscancelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/triggerRunsCancelSample.js
[triggerrunsquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/triggerRunsQueryByFactorySample.js
[triggerrunsrerunsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/triggerRunsRerunSample.js
[triggerscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/triggersCreateOrUpdateSample.js
[triggersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/triggersDeleteSample.js
[triggersgeteventsubscriptionstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/triggersGetEventSubscriptionStatusSample.js
[triggersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/triggersGetSample.js
[triggerslistbyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/triggersListByFactorySample.js
[triggersquerybyfactorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/triggersQueryByFactorySample.js
[triggersstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/triggersStartSample.js
[triggersstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/triggersStopSample.js
[triggerssubscribetoeventssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/triggersSubscribeToEventsSample.js
[triggersunsubscribefromeventssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/datafactory/arm-datafactory/samples/v20/javascript/triggersUnsubscribeFromEventsSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-datafactory?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/datafactory/arm-datafactory/README.md
